--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "dev": "next dev",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "manual-deploy-to-gh": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "gray-matter": "4.0.3",
